Added all retro calculator files

--- a/retro_space_calculator/Info.plist
+++ b/retro_space_calculator/Info.plist
@@ -31,10 +31,10 @@
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
+	<array/>
+	<key>UIAppFonts</key>
 	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>Minecraft.ttf</string>
 	</array>
 </dict>
 </plist>
